Deploy_app/jtl/02-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jtl-reporter-be
  namespace: jtl-reporter
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jtl-reporter-be
  template:
    metadata:
      labels:
        app: jtl-reporter-be
    spec:
      containers:
        - name: jtl-reporter-be
          #image: novyl/jtl-reporter-be:v4.8.9
          image: novyl/jtl-reporter-be:v5.0.2
          ports:
            - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: be
spec:
  selector:
    app: jtl-reporter-be
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
