Deploy_app/jtl/03-listener.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jtl-reporter-listener
  namespace: jtl-reporter
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jtl-reporter-listener
  template:
    metadata:
      labels:
        app: jtl-reporter-listener
    spec:
      containers:
        - name: jtl-reporter-listener
          #image: novyl/jtl-reporter-listener-service:v2.1.0
          image: novyl/jtl-reporter-listener-service:v2.1.2
          ports:
            - containerPort: 6000
---
apiVersion: v1
kind: Service
metadata:
  name: jtl-reporter-listener
spec:
  selector:
    app: jtl-reporter-listener
  ports:
    - protocol: TCP
      port: 6000
      targetPort: 6000
